// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.

package model

import (
	"time"
)

const TableNameCoreValues = "core_values"

// CoreValues mapped from table <core_values>
type CoreValues struct {
	ID            uint      `gorm:"column:id;type:integer;primaryKey;autoIncrement:true" json:"id"`
	UserID        uint      `gorm:"column:user_id;type:integer;not null" json:"user_id"`
	Name          string    `gorm:"column:name;type:character varying(100);not null" json:"name"`
	Description   string    `gorm:"column:description;type:text" json:"description"`
	PriorityOrder *int      `gorm:"column:priority_order;type:integer" json:"priority_order"`
	Color         string    `gorm:"column:color;type:character varying(7)" json:"color"`
	IsActive      bool      `gorm:"column:is_active;type:boolean;default:true" json:"is_active"`
	CreatedAt     time.Time `gorm:"column:created_at;type:timestamp without time zone;default:now()" json:"created_at"`
	UpdatedAt     time.Time `gorm:"column:updated_at;type:timestamp without time zone;default:now()" json:"updated_at"`
	User          *Users    `gorm:"foreignKey:user_id;references:id" json:"user"`
}

// TableName CoreValues's table name
func (*CoreValues) TableName() string {
	return TableNameCoreValues
}
