// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.

package model

import (
	"time"
)

const TableNameJournals = "journals"

// Journals mapped from table <journals>
type Journals struct {
	ID             uint      `gorm:"column:id;type:integer;primaryKey;autoIncrement:true" json:"id"`
	UserID         uint      `gorm:"column:user_id;type:integer;not null" json:"user_id"`
	Title          string    `gorm:"column:title;type:character varying(255)" json:"title"`
	EntryDate      time.Time `gorm:"column:entry_date;type:date;not null" json:"entry_date"`
	Content        string    `gorm:"column:content;type:text;not null" json:"content"`
	WordCount      *int      `gorm:"column:word_count;type:integer" json:"word_count"`
	SentimentScore *float64  `gorm:"column:sentiment_score;type:numeric(3,2)" json:"sentiment_score"`
	IsPrivate      bool      `gorm:"column:is_private;type:boolean;default:true" json:"is_private"`
	Tags           string    `gorm:"column:tags;type:text" json:"tags"`
	CreatedAt      time.Time `gorm:"column:created_at;type:timestamp without time zone;default:now()" json:"created_at"`
	UpdatedAt      time.Time `gorm:"column:updated_at;type:timestamp without time zone;default:now()" json:"updated_at"`
	User           *Users    `gorm:"foreignKey:user_id;references:id" json:"user"`
}

// TableName Journals's table name
func (*Journals) TableName() string {
	return TableNameJournals
}
