// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.

package model

import (
	"time"
)

const TableNameMoodEntries = "mood_entries"

// MoodEntries mapped from table <mood_entries>
type MoodEntries struct {
	ID             uint      `gorm:"column:id;type:integer;primaryKey;autoIncrement:true" json:"id"`
	UserID         uint      `gorm:"column:user_id;type:integer;not null" json:"user_id"`
	EntryDate      time.Time `gorm:"column:entry_date;type:date;not null;index:mood_entries_entry_date_idx,priority:1" json:"entry_date"`
	MoodID         uint      `gorm:"column:mood_id;type:integer;not null" json:"mood_id"`
	Intensity      *int      `gorm:"column:intensity;type:integer" json:"intensity"`
	WhenFelt       string    `gorm:"column:when_felt;type:character varying(20)" json:"when_felt"`
	TriggerEvent   string    `gorm:"column:trigger_event;type:text" json:"trigger_event"`
	CopingStrategy string    `gorm:"column:coping_strategy;type:text" json:"coping_strategy"`
	Notes          string    `gorm:"column:notes;type:text" json:"notes"`
	Location       string    `gorm:"column:location;type:character varying(100)" json:"location"`
	Weather        string    `gorm:"column:weather;type:character varying(50)" json:"weather"`
	CreatedAt      time.Time `gorm:"column:created_at;type:timestamp without time zone;default:now()" json:"created_at"`
	User           *Users    `gorm:"foreignKey:user_id;references:id" json:"user"`
	Mood           *Moods    `gorm:"foreignKey:mood_id;references:id" json:"mood"`
}

// TableName MoodEntries's table name
func (*MoodEntries) TableName() string {
	return TableNameMoodEntries
}
