@startuml Analysis_Class_Diagram
!theme plain
title 2.7 Шинжилгээний класс диаграм

' Core Domain Classes
class User {
  - id: Long
  - uuid: UUID
  - name: String
  - email: String
  - password: String
  - totalScore: Integer
  - currentLevel: Integer
  - profilePicture: String
  - timezone: String
  - isActive: Boolean
  + register()
  + login()
  + updateProfile()
  + getStatistics()
}

class Notification {
  - id: Long
  - userId: Long
  - type: String
  - message: Text
  - status: String
  - createdAt: Timestamp
  + send()
  + markAsRead()
  + archive()
}
User "1" -- "0..*" Notification : receives


class CoreValue {
  - id: Long
  - userId: Long
  - maslowLevelId: Integer
  - name: String
  - description: String
  - priorityOrder: Integer
  - color: String
  - isActive: Boolean
  + create()
  + update()
  + linkToMaslowLevel()
  + checkAlignment()
}

class MaslowLevel {
  - id: Integer
  - levelNumber: Integer
  - name: String
  - description: String
  - color: String
  - icon: String
  + getLevel()
  + getLevelDescription()
}

class Journal {
  - id: Long
  - userId: Long
  - title: String
  - content: Text
  - wordCount: Integer
  - sentimentScore: Decimal
  - tags: Array
  - relatedValueIds: Array
  - createdAt: Timestamp
  + create()
  + update()
  + delete()
  + analyzeContent()
}

class MoodEntry {
  - id: Long
  - userId: Long
  - moodId: Integer
  - entryDate: Date
  - intensity: Integer
  - triggerEvent: Text
  - copingStrategy: Text
  - relatedValueIds: Array
  + create()
  + update()
  + analyzeTrigger()
  + detectPattern()
}

class Goal {
  - id: Long
  - userId: Long
  - valueId: Long
  - title: String
  - description: Text
  - goalType: String
  - targetDate: Date
  - status: String
  - progressPercentage: Integer
  + create()
  + update()
  + trackProgress()
  + complete()
}

class MeditationSession {
  - id: Long
  - userId: Long
  - techniqueId: Integer
  - sessionDate: Date
  - durationActual: Integer
  - qualityRating: Integer
  - moodBefore: String
  - moodAfter: String
  + startSession()
  + endSession()
  + recordFeedback()
}

class Lesson {
  - id: Long
  - categoryId: Integer
  - title: String
  - content: Text
  - lessonType: String
  - difficultyLevel: String
  - pointsReward: Integer
  - tags: Array
  + view()
  + complete()
  + rate()
}

' AI Analysis Classes
class AIJournalAnalysis {
  - id: Long
  - journalId: Long
  - userId: Long
  - overallSentiment: Decimal
  - primaryEmotions: JSON
  - emotionalDepthScore: Integer
  - selfReflectionScore: Integer
  - goalAlignmentScore: Integer
  - totalWeightedScore: Decimal
  - finalPoints: Integer
  - personalizedFeedback: Text
  + analyzeJournal()
  + calculateScores()
  + detectPatterns()
  + generateFeedback()
}

class AIMoodAnalysis {
  - id: Long
  - moodEntryId: Long
  - userId: Long
  - moodConsistencyScore: Integer
  - triggerPatternScore: Integer
  - copingEffectivenessScore: Integer
  - detectedPatterns: JSON
  - improvementSuggestions: Array
  + analyzeMood()
  + detectTriggerPatterns()
  + assessCoping()
}

class AIWeeklyDeepAnalysis {
  - id: Long
  - userId: Long
  - analysisWeek: Date
  - hiddenEmotionalPatterns: JSON
  - unconsciousTriggers: JSON
  - valuesInConflict: JSON
  - deepInsights: Text
  - recommendedActions: Array
  + performDeepAnalysis()
  + identifyHiddenPatterns()
  + detectValueConflicts()
  + generateRecommendations()
}

class DetectedPattern {
  - id: Long
  - userId: Long
  - patternType: String
  - patternCategory: String
  - description: Text
  - frequency: String
  - confidenceScore: Decimal
  - severity: String
  - suggestedActions: Array
  + detect()
  + categorize()
  + assessSeverity()
  + recommend()
}

class ConsciousnessTracking {
  - id: Long
  - userId: Long
  - measurementDate: Date
  - consciousnessScore: Integer
  - primaryLevelId: Integer
  - detectedFrom: String
  - confidenceScore: Decimal
  + calculateLevel()
  + trackProgress()
  + identifyShifts()
}

' Gamification Classes
class ScoringHistory {
  - id: Long
  - userId: Long
  - sourceType: String
  - sourceId: Long
  - pointsEarned: Integer
  - multiplier: Decimal
  - description: Text
  + recordPoints()
  + applyMultiplier()
  + calculateBonus()
}

class UserAchievement {
  - id: Long
  - userId: Long
  - achievementType: String
  - title: String
  - badgeIcon: String
  - pointsEarned: Integer
  - unlockedAt: Timestamp
  + unlock()
  + display()
}

class UserStreak {
  - id: Long
  - userId: Long
  - streakType: String
  - currentStreak: Integer
  - longestStreak: Integer
  - lastActivityDate: Date
  + update()
  + checkStreak()
  + calculateBonus()
}

' Relationships
User "1" -- "0..*" CoreValue : owns
User "1" -- "0..*" Journal : writes
User "1" -- "0..*" MoodEntry : records
User "1" -- "0..*" Goal : sets
User "1" -- "0..*" MeditationSession : performs
User "1" -- "0..*" ScoringHistory : earns
User "1" -- "0..*" UserAchievement : unlocks
User "1" -- "0..*" UserStreak : maintains

CoreValue "*" -- "1" MaslowLevel : belongs to

Journal "1" -- "0..1" AIJournalAnalysis : analyzed by
Journal "1" -- "0..*" CoreValue : relates to

MoodEntry "1" -- "0..1" AIMoodAnalysis : analyzed by
MoodEntry "1" -- "0..*" CoreValue : relates to

Goal "1" -- "0..1" CoreValue : aligned with

User "1" -- "0..*" DetectedPattern : has
User "1" -- "0..*" ConsciousnessTracking : tracked
User "1" -- "0..1" AIWeeklyDeepAnalysis : receives weekly

AIJournalAnalysis --> DetectedPattern : identifies
AIMoodAnalysis --> DetectedPattern : identifies
AIWeeklyDeepAnalysis --> DetectedPattern : identifies

@enduml